[package]
name = "makecab"
description = "Create a limited subset of Microsoft cabinet files"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "cc0"

[dependencies]
cab = "0.3"
chrono = "0.4"
clap = "2.3.0"
error-chain = { version = "0.7.2", default-features = false }
filetime = "0.1"

[dev-dependencies]
tempdir = "0.3.4"

[profile.release]
debug = true

[workspace]
